--- a/css/main.css
+++ b/css/main.css
@@ -269,7 +269,7 @@ button {
   margin-left: clamp(1em, 3vw, 4em);
 }
 
-.navbar .menu-link::after {
+.navbar .menu-link::after, .navbar .lang-link::after {
   content: "";
   display: block;
   width: 0;
@@ -279,21 +279,22 @@ button {
   transition: width 0.5s;
 }
 
-.navbar .menu-link:hover::after {
+.navbar .menu-link:hover::after, .navbar .lang-link:hover::after {
   width: 100%;
   -webkit-transition: width 0.5s;
   transition: width 0.5s;
 }
 
 .navbar .lang-link {
-  font-size: 0.6em;
+  font-size: clamp(0.6em, 1vw, 0.8em);
 }
 
 .navbar .lang-separator {
-  height: 12px;
+  height: 16px;
   margin-top: -2px;
   width: 1px;
   background-color: #80705a;
+  margin: 0 8px;
 }
 
 .navbar .menu-logo-img {
@@ -317,7 +318,7 @@ button {
   display: flex;
   position: fixed;
   top: 0;
-  right: 0;
+  right: 5px;
   margin-top: -1px;
   width: 75px;
   height: 75px;
@@ -400,7 +401,7 @@ button {
   }
   .mobile-navbar {
     position: relative;
-    height: 125px;
+    height: 126px;
     width: 100%;
     max-width: 100vw;
     overflow: hidden;
@@ -547,10 +548,11 @@ button {
             justify-content: center;
   }
   .lang-separator {
-    height: 12px;
+    height: 20px;
     margin-top: -2px;
     width: 1px;
     background-color: #80705a;
+    margin: 0 20px;
   }
   .arrow-container,
   .arrow {
@@ -699,15 +701,6 @@ h1 {
 }
 
 /* PROJET & EQUIPE*/
-@media (max-width: 768px) {
-  .container-projet {
-    display: none;
-  }
-  .container-equipe {
-    display: none;
-  }
-}
-
 @media only screen and (min-width: 769px) {
   .container-projet {
     display: -webkit-box;
@@ -719,16 +712,140 @@ h1 {
     display: -ms-flexbox;
     display: flex;
   }
+  .container-projet {
+    height: 100vh;
+    width: 200%;
+  }
+  .container-equipe {
+    height: 100vh;
+    width: 200%;
+  }
+  .projet-image,
+  .origine-image {
+    height: 100%;
+    width: 50%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .equipe-image,
+  .florent-image {
+    height: 100vh;
+    width: 50%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .image {
+    height: 100vh;
+    width: 50vw;
+  }
+  .projet-content {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    top: 0;
+  }
+  .equipe-content {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    top: 0;
+  }
+  .projet-article, .equipe-article {
+    margin-top: 150px;
+  }
+  .image-antiquaille {
+    margin-top: 60px;
+  }
+  .article {
+    margin-top: 50px;
+  }
 }
 
-.container-projet {
-  height: 100vh;
-  width: 200%;
-}
-
-.container-equipe {
-  height: 100vh;
-  width: 200%;
+@media (max-width: 768px) {
+  .container-projet {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .container-equipe {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .projet-slide {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .origine-slide {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .equipe-slide {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .florent-slide {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .container-projet {
+    height: 100vh;
+    width: 200%;
+  }
+  .container-equipe {
+    height: 100vh;
+    width: 200%;
+  }
+  .projet-image,
+  .origine-image {
+    height: 50vh;
+    max-height: 50vh;
+    width: 100%;
+    overflow: hidden;
+  }
+  .equipe-image,
+  .florent-image {
+    height: 50vh;
+    max-height: 50vh;
+    width: 100%;
+    overflow: hidden;
+  }
+  .image {
+    height: 50vh;
+    width: 100%;
+  }
+  .projet-content {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+  }
+  .equipe-content {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+  }
+  .projet-article, .equipe-article {
+    margin-top: 50px;
+  }
+  .image-antiquaille {
+    margin-top: 50px;
+  }
+  .image-papier {
+    margin-top: -100px;
+  }
+  .article {
+    margin-top: 20px;
+  }
 }
 
 .projet-slide,
@@ -741,24 +858,15 @@ h1 {
 .projet-slide .origine-image,
 .origine-slide .projet-image,
 .origine-slide .origine-image {
-  height: 100vh;
-  width: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .projet-slide .image,
 .origine-slide .image {
-  height: 100vh;
-  width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   z-index: 0;
-}
-
-.projet-slide .image-antiquaille,
-.origine-slide .image-antiquaille {
-  margin-top: 60px;
 }
 
 .equipe-slide,
@@ -771,8 +879,6 @@ h1 {
 .equipe-slide .florent-image,
 .florent-slide .equipe-image,
 .florent-slide .florent-image {
-  height: 100vh;
-  width: 50%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -803,16 +909,11 @@ h1 {
 }
 
 .projet-content {
-  position: absolute;
-  left: 50%;
-  top: 0;
   margin: 0;
   padding: 0;
-  width: 50%;
 }
 
 .projet-content .projet-article {
-  margin-top: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -869,7 +970,7 @@ h1 {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .projet-content .projet-article article {
     width: 90%;
     padding-left: 50px;
@@ -885,17 +986,28 @@ h1 {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .projet-content .projet-article article {
+    width: 90%;
+    padding-left: 50px;
+  }
+  .projet-content .projet-article .projet-title {
+    color: #80705a;
+    padding-left: 50px;
+    font-family: "Gotham Book", sans-serif;
+  }
+  .projet-content .projet-article p {
+    line-height: 1.6em;
+    font-size: clamp(0.7em, 1vw, 1em);
+  }
+}
+
 .equipe-content {
-  position: absolute;
-  left: 50%;
-  top: 0;
   margin: 0;
   padding: 0;
-  width: 50%;
 }
 
 .equipe-content .equipe-article {
-  margin-top: 150px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -945,7 +1057,7 @@ h1 {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .equipe-content .equipe-article article {
     width: 90%;
     padding-left: 50px;
@@ -957,7 +1069,23 @@ h1 {
   }
   .equipe-content .equipe-article p {
     line-height: 1.8em;
-    font-size: clamp(0.8rem, 1vw, 1rem);
+    font-size: clamp(0.7em, 1vw, 1em);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .equipe-content article {
+    width: 90%;
+    padding-left: 50px;
+  }
+  .equipe-content .equipe-title {
+    color: #80705a;
+    padding-left: 50px;
+    font-family: "Gotham Book", sans-serif;
+  }
+  .equipe-content p {
+    line-height: 1.6em;
+    font-size: clamp(0.65em, 1vw, 1em);
   }
 }
 
@@ -975,7 +1103,6 @@ h1 {
 .article {
   height: 50%;
   min-height: 25vh;
-  margin-top: 50px;
   /* display: flex;
   align-items: center; */
   position: relative;
@@ -1104,17 +1231,64 @@ h1 {
   margin-bottom: 0;
   color: #80705a;
   font-family: "Gotham Book";
-  font-size: clamp(1.4em, 2vw, 2em);
-  padding: 0 4em;
+  font-size: clamp(1.2em, 2vw, 2em);
 }
 
 .produit-apropos-text {
   text-align: center;
-  font-size: clamp(0.9em, 1.5vw, 1.4em);
+  font-size: clamp(0.8em, 1.5vw, 1.4em);
   font-family: "Gotham Book";
-  line-height: 2.2em;
   font-weight: 500;
-  padding: 1em 4em 0 4em;
+}
+
+@media screen and (min-width: 1201px) {
+  .produit-title {
+    padding: 0 4em;
+  }
+  .produit-apropos-text {
+    padding: 1em 4em 0 4em;
+    line-height: 2.2em;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .produit-title {
+    padding: 0 4em;
+  }
+  .produit-apropos-text {
+    padding: 1em 4em 0 4em;
+    line-height: 2.2em;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .produit-title {
+    padding: 0 4em;
+  }
+  .produit-apropos-text {
+    padding: 1em 4em 0 4em;
+    line-height: 2.2em;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .produit-title {
+    padding: 0 2em;
+  }
+  .produit-apropos-text {
+    padding: 1em 2em 0 2em;
+    line-height: 1.6em;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .produit-title {
+    padding: 0 1em;
+  }
+  .produit-apropos-text {
+    padding: 2em 2em 0 2em;
+    line-height: 1.4em;
+  }
 }
 
 .produit-1,
@@ -1127,11 +1301,11 @@ h1 {
   margin-bottom: 10px;
 }
 
-.col {
+/* .col {
+  //display: flex;
   width: 50%;
   height: 100%;
-}
-
+} */
 .produit-square {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1146,11 +1320,9 @@ h1 {
 }
 
 .produit-article-title {
-  color: #868481;
   text-align: left;
   font-family: "Gotham Bold";
   padding-bottom: 25px;
-  border-bottom: 2px solid #80705a;
 }
 
 .produit-article {
@@ -1175,9 +1347,18 @@ h1 {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .produit-article {
     padding: 0 calc(max(5%, 25px)) 0 calc(max(10%, 50px));
+  }
+  .produit-article p {
+    line-height: 1.8em;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .produit-article {
+    padding: 0 calc(max(10%, 50px)) 0 calc(max(10%, 100px));
   }
   .produit-article p {
     line-height: 1.8em;
@@ -1192,9 +1373,91 @@ h1 {
   height: 50%;
   width: 50%;
   min-height: 60vh;
-  display: inline-block;
   position: relative;
   overflow: hidden;
+}
+
+@media screen and (min-width: 769px) {
+  .produit-image-box {
+    display: inline-block;
+  }
+  .produit-square {
+    width: 50%;
+    height: 100%;
+  }
+  .left {
+    float: left;
+    border-right: 5px solid #fff;
+  }
+  .right {
+    float: right;
+    border-left: 5px solid #fff;
+  }
+  .number {
+    color: #80705a;
+    opacity: 0.25;
+  }
+  .produit-article-title {
+    color: #868481;
+    border-bottom: 2px solid #80705a;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .produit-image-box {
+    display: none;
+  }
+  .produit-square {
+    width: 100%;
+    height: 100%;
+  }
+  .square-1 {
+    background-image: url(../assets/images/chimie.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #664513ad;
+    background-blend-mode: soft-light;
+  }
+  .square-2 {
+    background-image: url(../assets/images/creme_mains.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #816e52c2;
+    background-blend-mode: soft-light;
+  }
+  .square-3 {
+    background-image: url(../assets/images/water_drops.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #856f4ea2;
+    background-blend-mode: soft-light;
+  }
+  .square-4 {
+    background-image: url(../assets/images/rue_lyon.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-position-y: 0px;
+    background-color: #726654da;
+    background-blend-mode: soft-light;
+  }
+  .square-5 {
+    background-image: url(../assets/images/carte_paiement.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #6b5637c0;
+    background-blend-mode: soft-light;
+  }
+  .number {
+    color: white;
+    opacity: 0.5;
+  }
+  .produit-article-title {
+    color: white;
+    border-bottom: 2px solid white;
+  }
+  .produit-article-text {
+    color: white;
+  }
 }
 
 .produit-image {
@@ -1237,21 +1500,9 @@ h1 {
   background-image: url(../assets/images/carte_paiement.jpeg);
 }
 
-.left {
-  float: left;
-  border-right: 5px solid #fff;
-}
-
-.right {
-  float: right;
-  border-left: 5px solid #fff;
-}
-
 .number {
   z-index: 0;
   font-family: "Gotham Bold";
-  opacity: 0.25;
-  color: #80705a;
   font-size: clamp(16rem, calc(4vw + 20rem), 48rem);
   line-height: 1;
   position: absolute;
@@ -1377,8 +1628,6 @@ h1 {
   text-align: center;
   color: #fff;
   width: 80%;
-  min-width: 60vw;
-  padding: 5em;
 }
 
 .avis-article * + * {
@@ -1389,7 +1638,6 @@ h1 {
   font-family: "Gotham Book", sans-serif;
   font-weight: 400;
   line-height: 1.8;
-  margin: 0 4em;
   font-size: clamp(0.8rem, 1vw, 1rem);
   font-family: "Gotham Book";
   font-style: italic;
@@ -1427,6 +1675,56 @@ h1 {
 .avis-article .btn-avis:hover {
   background-color: #fff;
   color: #80705a;
+}
+
+@media screen and (min-width: 1201px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 5em;
+  }
+  .avis-text {
+    margin: 0 4em;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 5em;
+  }
+  .avis-text {
+    margin: 0 4em;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 5em;
+  }
+  .avis-text {
+    margin: 0 4em;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 1.5em;
+  }
+  .avis-text {
+    margin: 0 1em;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 1em;
+  }
+  .avis-text {
+    margin: 0 1em;
+  }
 }
 
 /* Partenaires */
@@ -1480,6 +1778,7 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  min-height: 250px;
 }
 
 .featured__item:hover, .featured__item:focus {
@@ -1506,9 +1805,6 @@ h1 {
 
 /* Footer */
 .footer-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   width: 100%;
   max-width: 100vw;
   height: 50%;
@@ -1517,50 +1813,31 @@ h1 {
           align-items: center;
   -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0px -25px 55px;
           box-shadow: rgba(0, 0, 0, 0.2) 0px -25px 55px;
-}
-
-.split-footer {
-  margin: 0 auto;
-  width: 100%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+
+/* .split-footer {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
   gap: 1em;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
   margin-bottom: 100px;
-}
+  border: 1px solid red;
 
-.split-footer > * {
-  -ms-flex-preferred-size: 30%;
-      flex-basis: 30%;
-  min-width: 15em;
-}
-
-@media screen and (min-width: 1201px) {
-  .footer-container {
-    min-height: 50vh;
+  & > * {
+    flex-basis: 30%;
+    min-width: 15em;
   }
-}
-
-@media screen and (min-width: 1025px) and (max-width: 1200px) {
-  .footer-container {
-    min-height: 40vh;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .footer-container {
-    min-height: 30vh;
-  }
-}
-
+} */
 .footer-social {
-  width: 30%;
-  min-width: 30vw;
+  /* width: 30%;
+  min-width: 30vw; */
 }
 
 .split-social {
@@ -1584,25 +1861,67 @@ h1 {
   min-width: 15em;
 }
 
-.col {
+/* .col {
+  display: flex;
+  align-items: center;
+  // border: 1px solid red;
+  height: 100%;
+} */
+.mailchimp-block {
+  padding: 2em 0;
+}
+
+.mentions-links-block {
+  line-height: 1.0;
+}
+
+.mentions-links-block a {
+  color: #222;
+  font-size: clamp(0.6em, 1vw, 1em);
+}
+
+.mentions-links-block a:hover {
+  color: #80705a;
+}
+
+@media screen and (min-width: 481px) {
+  .mentions-links-block {
+    padding-right: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mailchimp-block-content {
+    width: 100vw;
+  }
+  .mentions-links-block {
+    padding-right: 0;
+  }
+}
+
+.footer-logo,
+.footer-contact,
+.footer-social {
+  /*  height: 60%;
+  min-height: 200px; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 100%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0 auto;
 }
 
-.mailchimp-block,
 .social-block {
-  /*  height: 60%;
-  min-height: 200px; */
-  position: relative;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .footer-contact {
-  width: 40%;
+  /* width: 40%;
+  min-width: 400px; */
   /*.btn-contact:hover {
     font-weight: 800;
     background-color: #d6d6d6;
@@ -1618,10 +1937,45 @@ h1 {
     padding: 0.5em 1.25em;
     border-radius: 2em;
     transition: transform 250ms ease-in-out, opacity 250ms linear;*/
-  margin-bottom: 40px;
   padding: 0.5em 1em;
   font-size: clamp(0.7rem, 1vw, 1.2rem);
   white-space: nowrap;
+}
+
+@media screen and (min-width: 769px) {
+  .btn-contact {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .btn-contact {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .footer-logo {
+    width: 30%;
+    min-width: 30vw;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .btn-contact {
+    margin-bottom: 10px;
+  }
+  .mailchimp-block {
+    text-align: center;
+    padding-bottom: 50px;
+  }
+  .footer-logo {
+    padding-top: 20px;
+    width: 50%;
+  }
+  .social-block {
+    padding-bottom: 20px;
+  }
 }
 
 .footer-conditions {
@@ -1629,7 +1983,6 @@ h1 {
 }
 
 .footer-conditions .rules {
-  font-size: 0.65rem;
   font-size: clamp(0.5rem, 1vw, 0.8rem);
   color: #7b7b7b;
   width: 90%;
@@ -1706,7 +2059,6 @@ h1 {
 }
 
 .footer-social-email {
-  margin-top: 50px;
   color: #111;
   font-size: clamp(0.8em, 1.5vw, 1em);
 }
@@ -1716,8 +2068,6 @@ h1 {
 }
 
 .footer-logo {
-  width: 30%;
-  min-width: 30vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1739,17 +2089,17 @@ h1 {
   transition: -webkit-transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
-  -webkit-transform: scale(0.8);
-          transform: scale(0.8);
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
 }
 
 .footer-logo-img:hover {
-  -webkit-transform: scale(0.85);
-          transform: scale(0.85);
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .social {
-  margin-top: 40px;
+  padding: 1em 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1812,16 +2162,6 @@ h1 {
 
 .copyright-text a:hover {
   color: #d6d6d6;
-}
-
-.mentions-links-block a {
-  color: #222;
-  font-size: clamp(0.6em, 1vw, 1em);
-  padding-right: 20px;
-}
-
-.mentions-links-block a:hover {
-  color: #80705a;
 }
 
 /* Mentions légales */
@@ -2016,7 +2356,7 @@ h1 {
 } */
 /* .modal-logo-img {
 } */
-input {
+input[type=text], input[type=email] {
   width: 90%;
   display: block;
   margin: 15px auto;
@@ -2024,6 +2364,22 @@ input {
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #7b7b7b;
+}
+
+#genderArea {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  width: 90%;
+  text-align: left;
+  display: block;
+  margin: 15px auto;
+  height: 40px;
+  padding: 20px 0px 20px 5px;
+}
+
+#genderArea label {
+  margin: 0 20px 0 10px;
 }
 
 .relative-close {
@@ -2050,7 +2406,7 @@ input {
 
 .btn-mailchimp {
   margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   width: 40%;
   max-width: 150px;
   display: inline-block;
@@ -2189,6 +2545,7 @@ input {
   width: 100%;
   height: 0px;
   background-color: #262626;
+  opacity: 0.8;
   color: white;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -2211,8 +2568,9 @@ input {
 
 .cookies-consent p {
   text-align: center;
+  padding: 0 5px;
   width: 100%;
-  font-size: clamp(0.7em, 1vw, 1em);
+  font-size: clamp(0.65em, 1vw, 1em);
 }
 
 .cookies-consent a {
