--- a/css/main.scss
+++ b/css/main.scss
@@ -267,7 +267,7 @@ button {
     margin-left: clamp(1em, 3vw, 4em);
   }
 
-  .menu-link::after {
+  .menu-link::after, .lang-link::after {
     content: "";
     display: block;
     width: 0;
@@ -276,24 +276,25 @@ button {
     transition: width 0.5s;
   }
 
-  .menu-link:hover::after {
+  .menu-link:hover::after, .lang-link:hover::after {
     width: 100%;
     //color: #80705a;
     transition: width 0.5s;
   }
 
-  .lang-link {
-    font-size: 0.6em;
-  }
+.lang-link {
+    font-size: clamp(0.6em, 1vw, 0.8em);
+  } 
 
   /* .lang-link + .lang-link {
     border-left: 1px solid #80705a;
   } */
   .lang-separator {
-    height: 12px;
+    height: 16px;
     margin-top: -2px;
     width: 1px;
     background-color: #80705a;
+    margin: 0 8px;
   }
 
   .menu-logo-img {
@@ -313,7 +314,7 @@ button {
     display: flex;
     position: fixed;
     top: 0;
-    right: 0;
+    right: 5px;
     margin-top: -1px;
     width: 75px;
     height: 75px;
@@ -397,7 +398,7 @@ button {
 
   .mobile-navbar {
     position: relative;
-    height: 125px;
+    height: 126px;
     // max-height: 10vh;
     width: 100%;
     max-width: 100vw;
@@ -558,10 +559,12 @@ button {
   }
 
   .lang-separator {
-    height: 12px;
+    height: 20px;
     margin-top: -2px;
     width: 1px;
     background-color: #80705a;
+    
+    margin: 0 20px;
   }
 
   .arrow-container,
@@ -718,16 +721,6 @@ h1 {
 
 /* PROJET & EQUIPE*/
 
-@media (max-width: 768px) {
-  .container-projet {
-    display: none;
-  }
-
-  .container-equipe {
-    display: none;
-  }
-}
-
 @media only screen and (min-width: 769px) {
   .container-projet {
     display: flex;
@@ -736,18 +729,156 @@ h1 {
   .container-equipe {
     display: flex;
   }
+
+  .container-projet {
+    height: 100vh;
+    width: 200%;
+    //display: flex;
+  }
+  
+  .container-equipe {
+    height: 100vh;
+    width: 200%;
+    //display: flex;
+  }
+
+  .projet-image,
+  .origine-image {
+    height: 100%;
+    width: 50%;
+    object-fit: cover;
+  }
+
+  .equipe-image,
+  .florent-image {
+    height: 100vh;
+    width: 50%;
+    object-fit: cover;
+    
+  }
+
+
+  .image {
+    height: 100vh;
+    width: 50vw;
+  }
+
+  .projet-content {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    top: 0;
+  }
+
+  .equipe-content {
+    width: 50%;
+    position: absolute;
+    left: 50%;
+    top: 0;
+  }
+
+  .projet-article, .equipe-article {
+    margin-top: 150px;
+  }
+
+  .image-antiquaille {
+    margin-top: 60px;
+  }
+
+  .article {
+    margin-top: 50px;
+  }
 }
 
-.container-projet {
-  height: 100vh;
-  width: 200%;
-  //display: flex;
-}
+@media (max-width: 768px) {
+  .container-projet {
+    display: flex;
+  }
 
-.container-equipe {
-  height: 100vh;
-  width: 200%;
-  //display: flex;
+  .container-equipe {
+    display: flex;
+  }
+
+  .projet-slide {
+    flex-direction: column;
+  }
+
+  .origine-slide {
+    flex-direction: column;
+  }
+
+  .equipe-slide {
+    flex-direction: column;
+  }
+
+  .florent-slide {
+    flex-direction: column;
+  }
+
+  .container-projet {
+    height: 100vh;
+    width: 200%;
+    //display: flex;
+  }
+  
+  .container-equipe {
+    height: 100vh;
+    width: 200%;
+    //display: flex;
+  }
+
+  .projet-image,
+  .origine-image {
+    height: 50vh;
+    max-height: 50vh;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  
+  .equipe-image,
+  .florent-image {
+    height: 50vh;
+    max-height: 50vh;
+    width: 100%;
+    overflow: hidden;
+  }
+
+  .image {
+    height: 50vh;
+    width: 100%;
+  }
+  
+
+  .projet-content {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+  }
+
+  .equipe-content {
+    width: 100%;
+    position: absolute;
+    left: 0;
+    top: 50%;
+  }
+
+  .projet-article, .equipe-article {
+    margin-top: 50px;
+  }
+
+  .image-antiquaille {
+    margin-top: 50px;
+  }
+
+  .image-papier {
+    margin-top: -100px;
+  }
+
+  .article {
+    margin-top: 20px;
+  }
 }
 
 .projet-slide,
@@ -758,22 +889,13 @@ h1 {
 
   .projet-image,
   .origine-image {
-    height: 100vh;
-    //width: 49.6vw;
-    width: 50%;
     object-fit: cover;
   }
 
   .image {
-    height: 100vh;
-    width: 100%;
     object-fit: cover;
     z-index: 0;
-  }
-
-  .image-antiquaille {
-    margin-top: 60px;
-  }
+  }  
 }
 
 .equipe-slide,
@@ -783,8 +905,6 @@ h1 {
 
   .equipe-image,
   .florent-image {
-    height: 100vh;
-    width: 50%;
     object-fit: cover;
   }
 
@@ -813,15 +933,10 @@ h1 {
 }
 
 .projet-content {
-  position: absolute;
-  left: 50%;
-  top: 0;
   margin: 0;
   padding: 0;
-  width: 50%;
 
   .projet-article {
-    margin-top: 150px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -876,7 +991,7 @@ h1 {
       }
     }
 
-    @media screen and (max-width: 1024px) {
+    @media screen and (min-width: 769px) and (max-width: 1024px) {
       article {
         width: 90%;
         //min-width: 400px;
@@ -897,6 +1012,27 @@ h1 {
       }
     }
 
+    @media screen and (max-width: 768px) {
+      article {
+        width: 90%;
+        //min-width: 400px;
+        padding-left: 50px;
+        // font-size: clamp(0.6rem, 1vw, 0.8rem);
+      }
+  
+      .projet-title {
+        color: #80705a;
+        padding-left: 50px;
+        font-family: "Gotham Book", sans-serif;
+      }
+  
+      p {
+        line-height: 1.6em;
+        //line-height: clamp(1.5rem, 1vw, 2rem);
+        font-size: clamp(0.7em, 1vw, 1em);
+      }
+    }
+
     /* article {
       width: 80%;
       min-width: 400px;
@@ -907,15 +1043,10 @@ h1 {
 }
 
 .equipe-content {
-  position: absolute;
-  left: 50%;
-  top: 0;
   margin: 0;
   padding: 0;
-  width: 50%;
 
   .equipe-article {
-    margin-top: 150px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
@@ -969,7 +1100,7 @@ h1 {
       }
     }
 
-    @media screen and (max-width: 1024px) {
+    @media screen and (min-width: 769px) and (max-width: 1024px) {
       article {
         width: 90%;
         //min-width: 400px;
@@ -986,8 +1117,29 @@ h1 {
       p {
         line-height: 1.8em;
         //line-height: clamp(1.5rem, 1vw, 2rem);
-        font-size: clamp(0.8rem, 1vw, 1rem);
+        font-size: clamp(0.7em, 1vw, 1em);
       }
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    article {
+      width: 90%;
+      //min-width: 400px;
+      padding-left: 50px;
+      // font-size: clamp(0.6rem, 1vw, 0.8rem);
+    }
+
+    .equipe-title {
+      color: #80705a;
+      padding-left: 50px;
+      font-family: "Gotham Book", sans-serif;
+    }
+
+    p {
+      line-height: 1.6em;
+      //line-height: clamp(1.5rem, 1vw, 2rem);
+      font-size: clamp(0.65em, 1vw, 1em);
     }
   }
 }
@@ -1004,7 +1156,6 @@ h1 {
 .article {
   height: 50%;
   min-height: 25vh;
-  margin-top: 50px;
   /* display: flex;
   align-items: center; */
   position: relative;
@@ -1122,17 +1273,69 @@ h1 {
   margin-bottom: 0;
   color: #80705a;
   font-family: "Gotham Book";
-  font-size: clamp(1.4em, 2vw, 2em);
-  padding: 0 4em;
+  font-size: clamp(1.2em, 2vw, 2em);
 }
 
 .produit-apropos-text {
   text-align: center;
-  font-size: clamp(0.9em, 1.5vw, 1.4em);
+  font-size: clamp(0.8em, 1.5vw, 1.4em);
   font-family: "Gotham Book";
-  line-height: 2.2em;
   font-weight: 500;
-  padding: 1em 4em 0 4em;
+}
+
+@media screen and (min-width: 1201px) {
+  .produit-title {
+    padding: 0 4em;
+  }
+
+  .produit-apropos-text {
+    padding: 1em 4em 0 4em;
+    line-height: 2.2em;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .produit-title {
+    padding: 0 4em;
+  }
+
+  .produit-apropos-text {
+    padding: 1em 4em 0 4em;
+    line-height: 2.2em;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .produit-title {
+    padding: 0 4em;
+  }
+
+  .produit-apropos-text {
+    padding: 1em 4em 0 4em;
+    line-height: 2.2em;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .produit-title {
+    padding: 0 2em;
+  }
+
+  .produit-apropos-text {
+    padding: 1em 2em 0 2em;
+    line-height: 1.6em;
+  }
+}
+
+@media screen  and (max-width: 480px) {
+  .produit-title {
+    padding: 0 1em;
+  }
+
+  .produit-apropos-text {
+    padding: 2em 2em 0 2em;
+    line-height: 1.4em;
+  }
 }
 
 .produit-1,
@@ -1145,11 +1348,11 @@ h1 {
   margin-bottom: 10px;
 }
 
-.col {
+/* .col {
   //display: flex;
   width: 50%;
   height: 100%;
-}
+} */
 
 .produit-square {
   display: flex;
@@ -1158,14 +1361,14 @@ h1 {
   min-height: 60vh;
   background-color: #e7e4e0;
   position: relative;
+
+  
 }
 
 .produit-article-title {
-  color: #868481;
   text-align: left;
   font-family: "Gotham Bold";
   padding-bottom: 25px;
-  border-bottom: 2px solid #80705a;
 }
 
 .produit-article {
@@ -1190,9 +1393,18 @@ h1 {
   }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
   .produit-article {
     padding: 0 calc(max(5%, 25px)) 0 calc(max(10%, 50px));
+    p {
+      line-height: 1.8em;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .produit-article {
+    padding: 0 calc(max(10%, 50px)) 0 calc(max(10%, 100px));
     p {
       line-height: 1.8em;
     }
@@ -1208,9 +1420,118 @@ h1 {
   width: 50%;
   min-height: 60vh;
   //min-width: 50vh;
-  display: inline-block;
   position: relative;
   overflow: hidden;
+}
+
+@media screen and (min-width: 769px) {
+  .produit-image-box {
+    display: inline-block;
+  }
+
+  .produit-square {
+      width: 50%;
+      height: 100%;
+    }
+
+    .left {
+      float: left;
+      border-right: 5px solid #fff;
+      //margin-left: 5px;
+    }
+    
+    .right {
+      float: right;
+      border-left: 5px solid #fff;
+    }
+
+
+    .number {
+      color: #80705a;
+      opacity: 0.25;
+    }
+
+    
+    .produit-article-title {
+      color: #868481;
+      border-bottom: 2px solid #80705a;
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+  .produit-image-box {
+    display: none;
+  }
+
+  .produit-square {    
+    width: 100%;
+    height: 100%;
+  }
+
+  .right {
+
+  }
+
+  .left {
+    
+  }
+
+  .square-1 {
+    background-image: url(../assets/images/chimie.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #664513ad;
+    background-blend-mode: soft-light;
+  }
+  
+  .square-2 {
+    background-image: url(../assets/images/creme_mains.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #816e52c2;
+    background-blend-mode: soft-light;
+  }
+  
+  .square-3 {
+    background-image: url(../assets/images/water_drops.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #856f4ea2;
+    background-blend-mode: soft-light;
+  }
+  
+  .square-4 {
+    background-image: url(../assets/images/rue_lyon.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-position-y: 0px;
+    background-color: #726654da;
+    background-blend-mode: soft-light;
+  }
+  
+  .square-5 {
+    background-image: url(../assets/images/carte_paiement.jpeg);
+    background-position: center center;
+    background-size: cover;
+    background-color: #6b5637c0;
+    background-blend-mode: soft-light;
+  }
+
+  .number {
+    color:white;
+    opacity: 0.5;
+  }
+
+  
+  .produit-article-title {
+    color: white;
+    border-bottom: 2px solid white;
+  }
+
+  .produit-article-text {
+    color: white;
+  }
 }
 
 .produit-image {
@@ -1249,22 +1570,11 @@ h1 {
   background-image: url(../assets/images/carte_paiement.jpeg);
 }
 
-.left {
-  float: left;
-  border-right: 5px solid #fff;
-  //margin-left: 5px;
-}
 
-.right {
-  float: right;
-  border-left: 5px solid #fff;
-}
 
 .number {
   z-index: 0;
   font-family: "Gotham Bold";
-  opacity: 0.25;
-  color: #80705a;
   font-size: clamp(16rem, calc(4vw + 20rem), 48rem);
   line-height: 1;
   position: absolute;
@@ -1381,9 +1691,6 @@ h1 {
   text-align: center;
   color: #fff;
   width: 80%;
-  min-width: 60vw;
-
-  padding: 5em;
 
   * + * {
     padding-top: 2em;
@@ -1393,7 +1700,7 @@ h1 {
     font-family: "Gotham Book", sans-serif;
     font-weight: 400;
     line-height: 1.8;
-    margin: 0 4em;
+    // margin: 0 4em;
     font-size: clamp(0.8rem, 1vw, 1rem);
     font-family: "Gotham Book";
     font-style: italic;
@@ -1425,6 +1732,7 @@ h1 {
   .btn-avis + .btn-avis {
     margin: 2em;
   }
+
   .btn-avis:hover {
     //transform: scale(1.1);
     //opacity: 0.9;
@@ -1432,6 +1740,62 @@ h1 {
     color: #80705a;
   }
 }
+
+@media screen and (min-width: 1201px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 5em;
+  }
+
+  .avis-text {
+    margin: 0 4em;
+  }
+}
+
+@media screen and (min-width: 1025px) and (max-width: 1200px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 5em;
+  }
+
+  .avis-text {
+    margin: 0 4em;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 5em;
+  }
+
+  .avis-text {
+    margin: 0 4em;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 1.5em;
+  }
+
+  .avis-text {
+    margin: 0 1em;
+  }
+}
+
+@media screen  and (max-width: 480px) {
+  .avis-article {
+    min-width: 60vw;
+    padding: 1em;
+  }
+
+  .avis-text {
+    margin: 0 1em;
+  }
+}
+
 
 /* Partenaires */
 
@@ -1475,6 +1839,7 @@ h1 {
 
     display: flex;
     align-items: center;
+    min-height: 250px;
 
     &:hover,
     &:focus {
@@ -1502,15 +1867,16 @@ h1 {
 /* Footer */
 
 .footer-container {
-  display: flex;
   width: 100%;
   max-width: 100vw;
   height: 50%;
   align-items: center;
   box-shadow: rgba(0, 0, 0, 0.2) 0px -25px 55px;
+  flex-wrap: wrap;
+  display: flex;
 }
 
-.split-footer {
+/* .split-footer {
   margin: 0 auto;
   width: 100%;
   display: flex;
@@ -1518,34 +1884,35 @@ h1 {
   flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 100px;
+  border: 1px solid red;
 
   & > * {
     flex-basis: 30%;
     min-width: 15em;
   }
-}
+} */
 
 @media screen and (min-width: 1201px) {
   .footer-container {
-    min-height: 50vh;
+  //  min-height: 50vh;
   }
 }
 
 @media screen and (min-width: 1025px) and (max-width: 1200px) {
   .footer-container {
-    min-height: 40vh;
+   // min-height: 40vh;
   }
 }
 
 @media screen and (max-width: 1024px) {
   .footer-container {
-    min-height: 30vh;
+    //min-height: 30vh;
   }
 }
 
 .footer-social {
-  width: 30%;
-  min-width: 30vw;
+  /* width: 30%;
+  min-width: 30vw; */
 }
 
 .split-social {
@@ -1563,23 +1930,70 @@ h1 {
   }
 }
 
-.col {
+/* .col {
   display: flex;
   align-items: center;
   // border: 1px solid red;
   height: 100%;
+} */
+
+.mailchimp-block {
+  padding: 2em 0;
+
 }
 
-.mailchimp-block,
-.social-block {
+.mentions-links-block {
+  line-height: 1.0;
+  a {
+    color: #222;
+    font-size: clamp(0.6em, 1vw, 1em);
+    //text-decoration: none;
+  }
+
+  a:hover {
+    color: #80705a;
+  }
+
+
+}
+
+@media screen and (min-width: 481px) {
+  .mentions-links-block {
+    padding-right: 20px;
+  }
+
+}
+
+@media screen  and (max-width: 480px) {
+  .mailchimp-block-content {
+    width: 100vw;
+  }
+
+  .mentions-links-block {
+    padding-right: 0;
+  }
+}
+
+.footer-logo,
+.footer-contact,
+.footer-social {
   /*  height: 60%;
   min-height: 200px; */
-  position: relative;
+  //position: relative;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+
+}
+
+.social-block {
+  justify-content: center;
 }
 
 .footer-contact {
-  width: 40%;
-  //min-width: 40vw;
+  /* width: 40%;
+  min-width: 400px; */
+  
 
   .btn-contact {
     /*display: inline-block;
@@ -1590,7 +2004,6 @@ h1 {
     padding: 0.5em 1.25em;
     border-radius: 2em;
     transition: transform 250ms ease-in-out, opacity 250ms linear;*/
-    margin-bottom: 40px;
     padding: 0.5em 1em;
     font-size: clamp(0.7rem, 1vw, 1.2rem);
 
@@ -1604,12 +2017,51 @@ h1 {
   }*/
 }
 
+@media screen and (min-width: 769px) {
+  .btn-contact {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .btn-contact {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .footer-logo {
+  width: 30%;
+  min-width: 30vw;
+  }
+}
+
+
+
+@media screen  and (max-width: 480px) {
+  .btn-contact {
+    margin-bottom: 10px;
+  }
+  .mailchimp-block {
+    text-align: center;
+    padding-bottom: 50px;
+  }
+
+  .footer-logo {
+    padding-top: 20px;
+    width: 50%;
+  }
+
+  .social-block {
+    padding-bottom: 20px;
+  }
+
+}
+
 .footer-conditions {
   position: relative;
 
   .rules {
-    font-size: 0.65rem;
-
     font-size: clamp(0.5rem, 1vw, 0.8rem);
     color: #7b7b7b;
     width: 90%;
@@ -1672,6 +2124,7 @@ h1 {
 }
 
 .footer-social {
+  
 }
 
 .contact-us {
@@ -1679,7 +2132,7 @@ h1 {
 }
 
 .footer-social-email {
-  margin-top: 50px;
+  // margin-top: 50px;
   color: #111;
   font-size: clamp(0.8em, 1.5vw, 1em);
   //text-decoration: none;
@@ -1690,8 +2143,7 @@ h1 {
 }
 
 .footer-logo {
-  width: 30%;
-  min-width: 30vw;
+  //margin: 0 auto;
   display: flex;
   align-items: center;
   //height: 100%;
@@ -1706,15 +2158,16 @@ h1 {
 
 .footer-logo-img {
   transition: transform 250ms ease-in-out;
-  transform: scale(0.8);
+  transform: scale(0.9);
 }
 
 .footer-logo-img:hover {
-  transform: scale(0.85);
+  transform: scale(1);
 }
 
 .social {
-  margin-top: 40px;
+  // margin-top: 40px;
+  padding: 1em 0;
   display: flex;
   width: 100%;
   height: 100%;
@@ -1767,19 +2220,6 @@ h1 {
 
   a:hover {
     color: #d6d6d6;
-  }
-}
-
-.mentions-links-block {
-  a {
-    color: #222;
-    font-size: clamp(0.6em, 1vw, 1em);
-    padding-right: 20px;
-    //text-decoration: none;
-  }
-
-  a:hover {
-    color: #80705a;
   }
 }
 
@@ -1966,7 +2406,7 @@ h1 {
 /* .modal-logo-img {
 } */
 
-input {
+input[type=text], input[type=email] {
   width: 90%;
   display: block;
   margin: 15px auto;
@@ -1974,6 +2414,22 @@ input {
   padding: 5px;
   border-radius: 4px;
   border: 1px solid #7b7b7b;
+}
+
+#genderArea {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  width: 90%;
+  text-align: left;
+  display: block;
+  margin: 15px auto;
+  height: 40px;
+  padding: 20px 0px 20px 5px;
+}
+
+#genderArea label {
+  margin: 0 20px 0 10px;
 }
 
 .relative-close {
@@ -2001,7 +2457,7 @@ input {
 
 .btn-mailchimp {
   margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
   width: 40%;
   max-width: 150px;
 
@@ -2125,6 +2581,7 @@ input {
   width: 100%;
   height: 0px;
   background-color: #262626;
+  opacity: 0.8;
   color: white;
   align-items: center;
   display: flex;
@@ -2140,8 +2597,9 @@ input {
 
   p {
     text-align: center;
+    padding: 0 5px;
     width: 100%;
-    font-size: clamp(0.7em, 1vw, 1em);
+    font-size: clamp(0.65em, 1vw, 1em);
   }
 
   /* a + a {
